@@ -64,7 +64,7 @@
    "provides" : {
       "Dancer::Plugin::Deferred" : {
          "file" : "lib/Dancer/Plugin/Deferred.pm",
-         "version" : "0.001"
+         "version" : "0.002"
       }
    },
    "release_status" : "stable",
@@ -79,6 +79,6 @@
          "web" : "https://github.com/dagolden/dancer-plugin-deferred"
       }
    },
-   "version" : "0.001"
+   "version" : "0.002"
 }
 
