@@ -6,7 +6,7 @@ Dancer::Plugin::Deferred - Defer messages or data across redirections
 
 =head1 VERSION
 
-version 0.001
+version 0.002
 
 =head1 SYNOPSIS
 
@@ -43,29 +43,12 @@ When a template is rendered, a pre-template hook retrieves the data and
 deletes it from the session.  Alternatively, the data can be retrieved manually
 (which will also automatically delete the data.)
 
+Alternatively, the message ID parameters can be retrieved and used to
+construct a hyperlink for a message to be retrieved later.  In this case,
+the message is preserved past the template hook.  (The template should be
+sure not to render the message if not desired.)
+
 =for Pod::Coverage method_names_here
-
-=head1 CONFIGURATION
-
-=over 4
-
-=item *
-
-C<var_key: dpdid> -- this is the key in the C<var> hash containing the message ID
-
-=item *
-
-C<params_key: dpdid> -- this is the key in the C<params> hash containing the message ID
-
-=item *
-
-C<session_key_prefix>: dpd_> -- the message ID is appended to this prefix and used to store deferred data in the session
-
-=item *
-
-C<template_key: deferred> -- this is the key to deferred data passed to the template
-
-=back
 
 =head1 USAGE
 
@@ -86,6 +69,40 @@ data hash.
 This function returns all the deferred data as a hash reference and deletes
 the stored data.  This is called automatically in the C<before_template_render>
 hook, but is available if someone wants to have manual control.
+
+=head2 deferred_param
+
+  template 'index' => { link => uri_for( '/other', { deferred_param } ) };
+
+This function returns the parameter key and value used to propagate the
+message to another request.  Using this function toggles the C<var_keep_key>
+variable to true to ensure the message remains to be retrieved by the link.
+
+=head1 CONFIGURATION
+
+=over 4
+
+=item *
+
+C<var_key: dpdid> -- this is the key in the C<var> hash containing the message ID
+
+=item *
+
+C<var_keep_key: dpd_keep> -- if this key in C<var> is true, retrieving values will not be destructive
+
+=item *
+
+C<params_key: dpdid> -- this is the key in the C<params> hash containing the message ID
+
+=item *
+
+C<session_key_prefix>: dpd_> -- the message ID is appended to this prefix and used to store deferred data in the session
+
+=item *
+
+C<template_key: deferred> -- this is the key to deferred data passed to the template
+
+=back
 
 =head1 SEE ALSO
 
