@@ -2,6 +2,11 @@ Revision history for Dancer-Plugin-Deferred
 
 {{$NEXT}}
 
+  [ADDED]
+
+  - Added abillity to preserve the message and attach message
+    parameters manually to an arbitrary URI.
+
 0.001     2012-12-19 21:56:38 America/New_York
 
   - First release
